# smart-contract

./: .gitignore  Cargo.toml  README.md
.github/workflows/: actions.yml
guild-factory/: Cargo.toml
guild-factory/meta/: Cargo.toml
guild-factory/meta/src/: main.rs
guild-factory/src/: config.rs  factory.rs  guild_interactions.rs  lib.rs  token_roles.rs
guild-factory/tests/: factory_test.rs
guild-factory/tests/factory_setup/: mod.rs
guild-factory/wasm/: Cargo.toml
guild-factory/wasm/src/: lib.rs
guild-sc/: Cargo.toml
guild-sc-config/: Cargo.toml
guild-sc-config/meta/: Cargo.toml
guild-sc-config/meta/src/: main.rs
guild-sc-config/src/: global_config.rs  lib.rs  tier_types.rs  tiers.rs
guild-sc-config/wasm/: Cargo.toml
guild-sc-config/wasm/src/: lib.rs
guild-sc/meta/: Cargo.toml
guild-sc/meta/src/: main.rs
guild-sc/src/: base_impl_wrapper.rs  config.rs  custom_rewards.rs  events.rs  farm_token_roles.rs  lib.rs  migration.rs  read_config.rs  rewards.rs  token_attributes.rs  unbond_token.rs
guild-sc/src/contexts/: claim_rewards_context.rs  enter_farm_context.rs  mod.rs  storage_cache.rs
guild-sc/src/farm_base_impl/: base_farm_init.rs  base_farm_validation.rs  base_traits_impl.rs  claim_rewards.rs  compound_rewards.rs  enter_farm.rs  exit_farm.rs  mod.rs
guild-sc/src/tiered_rewards/: call_config.rs  mod.rs  read_config.rs  tokens_per_tier.rs  total_tokens.rs
guild-sc/src/tokens/: farm_token.rs  mod.rs  request_id.rs  token_attributes.rs  unbond_token.rs
guild-sc/src/user_actions/: claim_only_boosted_staking_rewards.rs  claim_stake_farm_rewards.rs  close_guild.rs  compound_stake_farm_rewards.rs  custom_events.rs  migration.rs  mod.rs  stake_farm.rs  unbond_farm.rs  unstake_farm.rs
guild-sc/tests/: farm_staking_energy_test.rs  farm_staking_test.rs
guild-sc/tests/farm_staking_setup/: mod.rs
guild-sc/wasm/: Cargo.toml
guild-sc/wasm/src/: lib.rs
philanthrify-charity/: Cargo.toml
philanthrify-charity/meta/: Cargo.toml
philanthrify-charity/meta/src/: main.rs
philanthrify-charity/src/: lib.rs
philanthrify-factory/: Cargo.toml
philanthrify-factory/meta/: Cargo.toml
philanthrify-factory/meta/src/: main.rs
philanthrify-factory/src/: lib.rs
philanthrify-project/: Cargo.toml
philanthrify-project/meta/: Cargo.toml
philanthrify-project/meta/src/: main.rs
philanthrify-project/src/: lib.rs
