[package]
name = "guild-factory"
version = "0.0.0"
authors = ["you"]
edition = "2021"
publish = false

[lib]
path = "src/lib.rs"

[dependencies.multiversx-sc]
version = "=0.47.5"

[dependencies.guild-sc]
path = "../guild-sc"

[dependencies.guild-sc-config]
path = "../guild-sc-config"

[dependencies.common_structs]
git = "https://github.com/multiversx/mx-exchange-sc"
rev = "71d5305"

[dependencies.utils]
git = "https://github.com/multiversx/mx-exchange-sc"
rev = "71d5305"

[dependencies.pausable]
git = "https://github.com/multiversx/mx-exchange-sc"
rev = "71d5305"

[dependencies.farm-boosted-yields]
git = "https://github.com/multiversx/mx-exchange-sc"
rev = "71d5305"

[dependencies.multiversx-sc-modules]
version = "=0.47.5"

[dev-dependencies]
num-bigint = "0.4"

[dev-dependencies.multiversx-sc-scenario]
version = "=0.47.5"

[dev-dependencies.config]
git = "https://github.com/multiversx/mx-exchange-sc"
rev = "71d5305"

[dev-dependencies.energy-factory]
git = "https://github.com/multiversx/mx-exchange-sc"
rev = "71d5305"

[dev-dependencies.farm]
git = "https://github.com/multiversx/mx-exchange-sc"
rev = "71d5305"

[dev-dependencies.energy-query]
git = "https://github.com/multiversx/mx-exchange-sc"
rev = "71d5305"

[dev-dependencies.farm_token]
git = "https://github.com/multiversx/mx-exchange-sc"
rev = "71d5305"
