[package]
name = "guild-factory"
version = "0.0.0"
authors = ["you"]
edition = "2021"
publish = false

[lib]
path = "src/lib.rs"

[dependencies.multiversx-sc]
version = "=0.52.3"

[dependencies.guild-sc]
path = "../guild-sc"

[dependencies.guild-sc-config]
path = "../guild-sc-config"

[dependencies.common_structs]
git = "https://github.com/multiversx/mx-exchange-sc"
rev = "5712bb3"

[dependencies.utils]
git = "https://github.com/multiversx/mx-exchange-sc"
rev = "5712bb3"

[dependencies.pausable]
git = "https://github.com/multiversx/mx-exchange-sc"
rev = "5712bb3"

[dependencies.multiversx-sc-modules]
version = "=0.52.3"

[dev-dependencies]
num-bigint = "0.4"

[dev-dependencies.multiversx-sc-scenario]
version = "=0.52.3"

[dev-dependencies.farm]
git = "https://github.com/multiversx/mx-exchange-sc"
rev = "5712bb3"
