[package]
name = "guild-sc-config"
version = "0.0.0"
authors = ["you"]
edition = "2021"
publish = false

[lib]
path = "src/lib.rs"

[dependencies.multiversx-sc]
version = "=0.47.5"

[dependencies.common_structs]
git = "https://github.com/multiversx/mx-exchange-sc"
rev = "71d5305"

[dev-dependencies]
num-bigint = "0.4"

[dev-dependencies.multiversx-sc-scenario]
version = "=0.47.5"
