[package]
name = "guild-sc"
version = "0.0.0"
authors = ["MultiversX <contact@multiversx.com>"]
edition = "2021"
publish = false

[lib]
path = "src/lib.rs"

[dependencies.farm]
git = "https://github.com/multiversx/mx-exchange-sc"
rev = "71d5305"

[dependencies.utils]
git = "https://github.com/multiversx/mx-exchange-sc"
rev = "71d5305"

[dependencies.token_send]
git = "https://github.com/multiversx/mx-exchange-sc"
rev = "71d5305"

[dependencies.pausable]
git = "https://github.com/multiversx/mx-exchange-sc"
rev = "71d5305"

[dependencies.permissions_module]
git = "https://github.com/multiversx/mx-exchange-sc"
rev = "71d5305"

[dependencies.sc_whitelist_module]
git = "https://github.com/multiversx/mx-exchange-sc"
rev = "71d5305"

[dependencies.math]
git = "https://github.com/multiversx/mx-exchange-sc"
rev = "71d5305"

[dependencies.mergeable]
git = "https://github.com/multiversx/mx-exchange-sc"
rev = "71d5305"

[dependencies.fixed-supply-token]
git = "https://github.com/multiversx/mx-exchange-sc"
rev = "71d5305"

[dependencies.pair]
git = "https://github.com/multiversx/mx-exchange-sc"
rev = "71d5305"

[dependencies.common_structs]
git = "https://github.com/multiversx/mx-exchange-sc"
rev = "71d5305"

[dependencies.common_errors]
git = "https://github.com/multiversx/mx-exchange-sc"
rev = "71d5305"

[dependencies.guild-sc-config]
path = "../guild-sc-config"

[dependencies.multiversx-sc]
version = "=0.47.5"
features = ["esdt-token-payment-legacy-decode"]

[dependencies.multiversx-sc-modules]
version = "=0.47.5"

[dev-dependencies]
num-bigint = "0.4.2"

[dev-dependencies.multiversx-sc-scenario]
version = "=0.47.5"
